--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -40,3 +40,35 @@ article {
 aside {
     background-color: #eaeaea;
 }
+
+.logo {
+    font-size: 2em;
+    font-weight: bold;
+    padding-right: 1em;
+}
+
+.highlight {
+    background-color: #f0f8ff;
+    border-left: 5px solid #4caf50;
+    padding: 1em;
+    margin-top: 1em;
+}
+
+body {
+    background-color: #fdfdfd;
+    color: #222;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+h1, h2 {
+    color: #333366;
+}
+
+a {
+    color: #0066cc;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
